# wavs-wasi

./: .gitignore  Cargo.toml  README.md  justfile  wkg.toml
.github/workflows/: basic.yml  publish-utils.yml  publish-wasm.yml  publish.yml
go/: README.md  go.mod
go/types/: trigger_result.go
go/wasi/cli/stderr/: stderr.wit.go
go/wasi/cli/stdin/: stdin.wit.go
go/wasi/cli/stdout/: stdout.wit.go
go/wasi/cli/terminal-stderr/: terminal-stderr.wit.go
go/wasi/cli/terminal-stdin/: terminal-stdin.wit.go
go/wasi/cli/terminal-stdout/: terminal-stdout.wit.go
go/wasi/clocks/monotonic-clock/: monotonic-clock.wit.go
go/wasi/filesystem/preopens/: preopens.wit.go
go/wasi/filesystem/types/: abi.go  types.wit.go
go/wasi/http/outgoing-handler/: outgoing-handler.wit.go
go/wasi/http/types/: types.wit.go
go/wasi/io/streams/: streams.wit.go
go/wasi/sockets/instance-network/: instance-network.wit.go
go/wasi/sockets/ip-name-lookup/: ip-name-lookup.wit.go
go/wasi/sockets/tcp/: abi.go  tcp.wit.go
go/wasi/sockets/tcp-create-socket/: tcp-create-socket.wit.go
go/wasi/sockets/udp/: abi.go  udp.wit.go
go/wasi/sockets/udp-create-socket/: udp-create-socket.wit.go
go/wavs/operator/layer-trigger-world/: layer-trigger-world.exports.go  layer-trigger-world.wasm.go  layer-trigger-world.wit.go
go/wavs/operator/layer-trigger-world/host/: host.wasm.go  host.wit.go
go/wavs/operator/layer-types/: abi.go  layer-types.wit.go
go/wavs/worker/layer-trigger-world/: abi.go  layer-trigger-world.exports.go  layer-trigger-world.wasm.go  layer-trigger-world.wit.go
go/wavs/worker/layer-trigger-world/host/: host.wasm.go  host.wit.go
go/wavs/worker/layer-types/: abi.go  layer-types.wit.go
sdk/wit/: wavs_worker.wit
wavs-wasi-utils/: Cargo.toml
wavs-wasi-utils/src/bindings/: world.rs
wit/: wavs_worker.wit
wit-definitions/aggregator/: wkg.toml
wit-definitions/aggregator/wit/: aggregator.wit
wit-definitions/operator/: wkg.toml
wit-definitions/operator/wit/: operator.wit
wit-definitions/types/: wkg.toml
wit-definitions/types/wit/: chain.wit  core.wit  events.wit  lib.wit  service.wit
wit-definitions/wasi-tls/: README.md
wit-definitions/wasi-tls/wit/: types.wit
wit-definitions/worker/: wkg.toml
wit-definitions/worker/wit/: worker.wit
