[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.4.0"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/WAVS-WASI"
rust-version = "1.84.0"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
wstd = "0.5.3"
wasi = "0.14.2"
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags", "async"] }
alloy-primitives = { version = "1.1.0", features = ["serde"] }
alloy-sol-types = "1.1.0"
alloy-json-rpc = "0.15.10"
alloy-provider = "0.15.10"
alloy-transport-http = "0.15.10"
alloy-transport = "0.15.10"
alloy-rpc-client = "0.15.10"
cfg-if = "1.0.0"
tower-service = "0.3.3"
futures-utils-wasm = "0.1.0"
http = "1.3.1"
wasmtime = { version = "32.0.0", features = [
    "cache",
    "component-model",
    "runtime",
    "std",
] }
